<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dk_float_ui_performance_info_bg"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <com.didichuxing.doraemonkit.widget.textview.LabelTextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/max_level"
                app:dkLabel="@string/dk_max_level"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <com.didichuxing.doraemonkit.widget.textview.LabelTextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/max_level_view_id"
                app:dkLabel="@string/dk_view_id"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <View
                android:background="@color/dk_color_333333"
                style="@style/DK.Divider" />

            <com.didichuxing.doraemonkit.widget.textview.LabelTextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/total_time"
                app:dkLabel="@string/dk_total_draw_time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <com.didichuxing.doraemonkit.widget.textview.LabelTextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/max_time"
                app:dkLabel="@string/dk_max_draw_time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <com.didichuxing.doraemonkit.widget.textview.LabelTextView
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/max_time_view_id"
                app:dkLabel="@string/dk_view_id"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

        </LinearLayout>

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|top"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:src="@mipmap/dk_close_icon" />

    </FrameLayout>
</FrameLayout>