<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#f5f6f7"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/dk_network_detail_title_body"
                android:textColor="#337cc4"
                android:textSize="@dimen/dk_font_size_16" />

            <View style="@style/DK.Divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:text="@string/dk_network_detail_title_size"
                    android:textColor="#333333"
                    android:textSize="@dimen/dk_font_size_16" />

                <TextView
                    android:id="@+id/tv_data_size"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:paddingRight="16dp"
                    android:textColor="#666666"
                    android:textSize="@dimen/dk_font_size_16" />
            </RelativeLayout>

            <View style="@style/DK.Divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:text="@string/dk_network_method"
                    android:textColor="#333333"
                    android:textSize="@dimen/dk_font_size_16" />

                <TextView
                    android:id="@+id/tv_method"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:paddingRight="16dp"
                    android:textColor="#666666"
                    android:textSize="@dimen/dk_font_size_16" />
            </RelativeLayout>

            <View style="@style/DK.Divider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#f5f6f7"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/dk_network_detail_title_url"
                android:textColor="#337cc4"
                android:textSize="@dimen/dk_font_size_16" />

            <View style="@style/DK.Divider" />

            <TextView
                android:id="@+id/tv_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:paddingRight="16dp"
                android:paddingBottom="10dp"
                android:textColor="#333333"
                android:textIsSelectable="true"
                android:textSize="@dimen/dk_font_size_16" />

            <View style="@style/DK.Divider" />

            <TextView
                android:id="@+id/diver_time"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#f5f6f7"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/dk_network_detail_title_request_time"
                android:textColor="#337cc4"
                android:textSize="@dimen/dk_font_size_16" />

            <View style="@style/DK.Divider" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:paddingRight="16dp"
                android:paddingBottom="10dp"
                android:textColor="#333333"
                android:textSize="@dimen/dk_font_size_16" />

            <View style="@style/DK.Divider" />

            <TextView
                android:id="@+id/diver_header"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#f5f6f7"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:text="@string/dk_network_detail_title_request_header"
                android:textColor="#337cc4"
                android:textSize="@dimen/dk_font_size_16" />

            <View style="@style/DK.Divider" />

            <TextView
                android:id="@+id/tv_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:paddingRight="16dp"
                android:paddingBottom="10dp"
                android:textColor="#333333"
                android:textIsSelectable="true"
                android:textSize="@dimen/dk_font_size_16" />

            <View style="@style/DK.Divider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#f5f6f7">

                <TextView
                    android:id="@+id/diver_body"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/dk_network_detail_title_request_body"
                    android:textColor="#337cc4"
                    android:textSize="@dimen/dk_font_size_16" />


                <TextView
                    android:id="@+id/diver_format"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="格式化"
                    android:textColor="#337cc4"
                    android:textSize="@dimen/dk_font_size_16" />

                <TextView
                    android:id="@+id/diver_export"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@id/diver_format"
                    android:gravity="center_vertical"
                    android:text="导出"
                    android:textColor="#337cc4"
                    android:textSize="@dimen/dk_font_size_16" />
            </RelativeLayout>


            <View style="@style/DK.Divider" />

            <TextView
                android:id="@+id/tv_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="50dp"
                android:paddingLeft="16dp"
                android:paddingTop="14dp"
                android:paddingRight="16dp"
                android:paddingBottom="14dp"
                android:textColor="#333333"
                android:textIsSelectable="true"
                android:textSize="@dimen/dk_font_size_16" />

            <com.didichuxing.doraemonkit.widget.jsonviewer.JsonRecyclerView
                android:id="@+id/json_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="14dp"

                />
        </LinearLayout>

    </ScrollView>
</FrameLayout>